# identity-cloud-agent

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  account-stronghold.hodl.example  docker-compose.yml  ica2.Rocket.toml  wallet.hold.example
.github/workflows/: docker.yml
examples/: log-controller.rs
src/: bin.rs  config.rs  configext.rs  jsonld.rs  keyutils.rs  ledger.rs  lib.rs  main.rs  message.rs  ping.rs  resolver.rs  server.rs  tests.rs  wallet.rs
src/assets/: degree_schema.json
src/connection/: events.rs  invitation.rs  mod.rs
src/credential/: events.rs  issue.rs  mod.rs
src/didcomm/: client.rs  mod.rs  test_client.rs  tests.rs
src/presentation/: events.rs  mod.rs  proposal.rs
src/schema/: mod.rs
src/topic/: mod.rs  webhook.rs
src/webhook/: client.rs  endpoint.rs  mod.rs  test_client.rs
