[package]
name = "identity-cloud-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "identity_cloud_agent"
path = "src/lib.rs"

[[bin]]
name = "identity_cloud_agent_bin"
path = "src/bin.rs"

[dependencies]
async-trait = "0.1"
http = "0.2"
identity = { git = "https://github.com/iotaledger/identity.rs", branch = "dev", features = [
    "account",
] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_okapi = { git = "https://github.com/ThouCheese/okapi", branch = "feat/rocket0.5-rc.2", features = ["swagger"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.5", features = ["full"] }
url = "2.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
