[package]
edition = "2021"
name = "identity-cloud-agent"
version = "0.1.0"

[lib]
name = "identity_cloud_agent"
path = "src/lib.rs"

[[bin]]
name = "identity_cloud_agent_bin"
path = "src/bin.rs"

[dependencies]
async-trait = "0.1"
base58 = "0.2"
base64 = "0.13"
didcomm-rs = { version = "0.7.2", git = "https://github.com/decentralized-identity/didcomm-rs", default-features = false, features = [
    "raw-crypto",
] }
didcomm_mediator = { git = "https://github.com/chriamue/didcomm-mediator" }
didcomm-protocols = { git = "https://github.com/chriamue/didcomm-protocols" }
did-key = "*"
futures = "0.3"
hex = { version = "0.4.3", features = ["serde"] }
http = "0.2"
identity_iota = { version = "0.6"}
pharos = "0.5"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_okapi = { git = "https://github.com/ThouCheese/okapi", branch = "feat/rocket0.5-rc.2", features = [
    "swagger",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.19", features = ["full"] }
url = "2.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
